--- a/Bottom.html
+++ b/Bottom.html
@@ -33,7 +33,7 @@ body {
 
 <div class="grid-container">
   <div class="grid-item">
-    <img src="your_image.jpg" alt="Your Image" class="draggable-image">
+    <img class="icon" src="https://www.vgmuseum.com/features/icons/3dsicons/3dsicons-591.png" alt="eShop" class="draggable-image">
   </div>
 </div>
 
@@ -69,3 +69,8 @@ document.addEventListener('mouseup', () => {
 
 </body>
 </html>
+<img class="icon" src="https://www.vgmuseum.com/features/icons/3dsicons/3dsicons-262.png" alt="Game 1">
+      <img class="icon" src="https://www.vgmuseum.com/features/icons/3dsicons/3dsicons-158.png" alt="Game 2">
+      <img class="icon" src="https://www.vgmuseum.com/features/icons/3dsicons/3dsicons-1271.png" alt="Game 3"> 
+      
+      <img class="icon" src="https://www.vgmuseum.com/features/icons/3dsicons/3dsicons-673.png" alt="YouTube">
