--- a/Bottom.html
+++ b/Bottom.html
@@ -12,18 +12,19 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(5, 1fr); 
-  grid-template-rows: repeat(25, 1fr); 
-  gap: 5px; 
-  border: 1px solid #ccc;
+  grid-template-columns: repeat(25, 1fr); 
+  grid-template-rows: repeat(5, 1fr); 
+  gap: 8px; 
+  border: 2px solid #ccc;
   border-radius: 10px; 
   padding: 10px;
 }
 
 .draggable-image {
-  width: 100%; 
-  height: 100%; 
-  border-radius: 5px; 
+  width: 50px; 
+  height: 50px; 
+  border-radius: 9px;
+  border: 8px solid #fefefe;
   cursor: move; 
 }
 
@@ -33,7 +34,7 @@ body {
 
 <div class="grid-container">
   <div class="grid-item">
-    <img class="icon" src="https://www.vgmuseum.com/features/icons/3dsicons/3dsicons-591.png" alt="eShop" class="draggable-image">
+    <img src="https://www.vgmuseum.com/features/icons/3dsicons/3dsicons-591.png" alt="eShop" class="draggable-image">
   </div>
 </div>
 
