--- a/Bottom.html
+++ b/Bottom.html
@@ -87,10 +87,10 @@ body {
 
 <div class="grid-container">
   <div class="app-icon" data-app="game1">
-    <img src="game1_icon.png" alt="Game 1"> 
+    <img src="https://www.vgmuseum.com/features/icons/3dsicons/3dsicons-591.png" alt="Game 1"> 
   </div>
   <div class="app-icon" data-app="game2">
-    <img src="game2_icon.png" alt="Game 2"> 
+    <img src="https://www.vgmuseum.com/features/icons/3dsicons/3dsicons-262.png" alt="Game 2"> 
   </div>
   </div>
 </div>
